# c2-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  install.ps1  install.sh  release.toml
.github/workflows/: release.yml
src/: justfile  lib.rs  main.rs
src/core/: config.rs  deployable.rs  executable.rs  gen_deployable.rs  mod.rs
src/deployables/: base.rs  executables.rs  importables.rs  init.rs  initr.rs  mod.rs
src/folders/api/: _api_wrapper.py  _async_api_wrapper.py
src/folders/init/: .gitignore  CODEOWNERS  cliff.toml  justfile  pyproject.toml
src/folders/init/.github/workflows/: format_check.yml  test.yml
src/folders/initr/: .Rbuildignore  DESCRIPTION
src/folders/logger/: ensure_logger.py
src/folders/pandas/: main.py.jinja2  optimized.py.jinja2
src/folders/timer/: medir_tiempo.py
src/io/: file_parser.rs  mod.rs  module_data.rs  module_path.rs  recursive_add.rs  rmd_to_r.rs
src/resources/: gen_polars.py
