[package]
name = "c2-cli"
version = "0.3.1"
edition = "2024"
description = "CLI para inicializar proyectos Python e importar módulos reutilizables."
license = "MIT"
repository = "https://github.com/c2-circulo-desarrolladores/c2-cli"

[dependencies]
clap = { version = "4.5.58", features = ["derive"]}

[[bin]]
name = "c2"
path = "src/main.rs"
