[package]
name = "c2-cli"
version = "0.8.3"
edition = "2024"
description = "CLI para inicializar proyectos Python e importar módulos reutilizables."
license = "MIT"
repository = "https://github.com/c2-circulo-desarrolladores/c2-cli"

[dependencies]
clap = { version = "4.5.58", features = ["derive"]}
include_dir = "0.7.4"

[[bin]]
name = "c2"
path = "src/main.rs"
