[package]
name = "c2-cli"
version = "0.10.1"
edition = "2024"
description = "CLI para inicializar proyectos Python e importar módulos reutilizables."
license = "MIT"
repository = "https://github.com/c2-circulo-desarrolladores/c2-cli"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.5.58", features = ["derive"]}
directories = "6.0.0"
include_dir = "0.7.4"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"

[[bin]]
name = "c2"
path = "src/main.rs"
