[project]
name = "<REPO>"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Spanish",
]

[project.urls]
Repository = "https://github.com/<OWNER>/<REPO>"
Changelog = "https://github.com/<OWNER>/<REPO>/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["commitizen", "git-cliff", "pre-commit", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/<PACKAGE>"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"

[tool.ruff.lint]
select = ["F", "I", "E"]
ignore = ["E501"]
